[gd_scene load_steps=2 format=3 uid="uid://dvsgbl1ypltho"]

[ext_resource type="Script" path="res://hud.gd" id="1_jjmbk"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_jjmbk")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 194.0
offset_bottom = 182.0

[node name="AStarGrid" type="GridContainer" parent="GridContainer"]
layout_mode = 2
columns = 2

[node name="Name" type="Label" parent="GridContainer/AStarGrid"]
layout_mode = 2
text = "A*"

[node name="fill" type="Label" parent="GridContainer/AStarGrid"]
layout_mode = 2

[node name="Timer" type="Label" parent="GridContainer/AStarGrid"]
layout_mode = 2
size_flags_vertical = 0
text = "Time: "

[node name="Time" type="Label" parent="GridContainer/AStarGrid"]
layout_mode = 2

[node name="NodesCalculatedText" type="Label" parent="GridContainer/AStarGrid"]
layout_mode = 2
text = "Nodes Calculated: "

[node name="NodesCalculated" type="Label" parent="GridContainer/AStarGrid"]
layout_mode = 2
text = "0"

[node name="DStarGrid" type="GridContainer" parent="GridContainer"]
layout_mode = 2
columns = 2

[node name="Name" type="Label" parent="GridContainer/DStarGrid"]
layout_mode = 2
text = "D*"

[node name="fill" type="Label" parent="GridContainer/DStarGrid"]
layout_mode = 2

[node name="Timer" type="Label" parent="GridContainer/DStarGrid"]
layout_mode = 2
size_flags_vertical = 0
text = "Time: "

[node name="Time" type="Label" parent="GridContainer/DStarGrid"]
layout_mode = 2

[node name="NodesCalculatedText" type="Label" parent="GridContainer/DStarGrid"]
layout_mode = 2
text = "Nodes Calculated: "

[node name="NodesCalculated" type="Label" parent="GridContainer/DStarGrid"]
layout_mode = 2
text = "0"

[node name="DStarLiteGrid" type="GridContainer" parent="GridContainer"]
layout_mode = 2
columns = 2

[node name="Name" type="Label" parent="GridContainer/DStarLiteGrid"]
layout_mode = 2
text = "D* Lite"

[node name="fill" type="Label" parent="GridContainer/DStarLiteGrid"]
layout_mode = 2

[node name="Timer" type="Label" parent="GridContainer/DStarLiteGrid"]
layout_mode = 2
size_flags_vertical = 0
text = "Time: "

[node name="Time" type="Label" parent="GridContainer/DStarLiteGrid"]
layout_mode = 2

[node name="NodesCalculatedText" type="Label" parent="GridContainer/DStarLiteGrid"]
layout_mode = 2
text = "Nodes Calculated: "

[node name="NodesCalculated" type="Label" parent="GridContainer/DStarLiteGrid"]
layout_mode = 2
text = "0"

[node name="LPAStarGrid" type="GridContainer" parent="GridContainer"]
layout_mode = 2
columns = 2

[node name="Name" type="Label" parent="GridContainer/LPAStarGrid"]
layout_mode = 2
text = "LPA*"

[node name="fill" type="Label" parent="GridContainer/LPAStarGrid"]
layout_mode = 2

[node name="Timer" type="Label" parent="GridContainer/LPAStarGrid"]
layout_mode = 2
size_flags_vertical = 0
text = "Time: "

[node name="Time" type="Label" parent="GridContainer/LPAStarGrid"]
layout_mode = 2

[node name="NodesCalculatedText" type="Label" parent="GridContainer/LPAStarGrid"]
layout_mode = 2
text = "Nodes Calculated: "

[node name="NodesCalculated" type="Label" parent="GridContainer/LPAStarGrid"]
layout_mode = 2
text = "0"

[node name="WallsChangedGrid" type="GridContainer" parent="GridContainer"]
layout_mode = 2
columns = 2

[node name="WallsChangedText" type="Label" parent="GridContainer/WallsChangedGrid"]
layout_mode = 2
text = "Walls Changed: "

[node name="WallsChangedCount" type="Label" parent="GridContainer/WallsChangedGrid"]
layout_mode = 2
text = "0"
